-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0 Alpha
-
None
QtLocation currently reprojects all QGeoCoordinates at each redraw for most of Map Items.
This should be optimized, as the projection (e.g., webmercator) won't change unless the data (geo coordinates) change.
For Gerrit Dashboard: QTBUG-59479 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
188391,6 | Cache coordinate projections in map items | 5.9 | qt/qtlocation | Status: MERGED | +2 | 0 |